common/inc/sgx_tcrypto.h

typedef struct _sgx_ec256_dh_shared_t
{
    uint8_t s[SGX_ECP256_KEY_SIZE];
} sgx_ec256_dh_shared_t;
typedef struct _sgx_ec256_private_t
{
    uint8_t r[SGX_ECP256_KEY_SIZE];
} sgx_ec256_private_t;
typedef struct _sgx_ec256_public_t
{
    uint8_t gx[SGX_ECP256_KEY_SIZE];
    uint8_t gy[SGX_ECP256_KEY_SIZE];
} sgx_ec256_public_t;
typedef struct _sgx_ec256_signature_t
{
    uint32_t x[SGX_NISTP_ECP256_KEY_SIZE];
    uint32_t y[SGX_NISTP_ECP256_KEY_SIZE];
} sgx_ec256_signature_t;
typedef void* sgx_hmac_state_handle_t;
typedef void* sgx_ecc_state_handle_t;
typedef void* sgx_aes_state_handle_t;
typedef void* sgx_sm3_state_handle_t;
typedef void* sgx_sm4_state_handle_t;
typedef uint8_t sgx_sm3_hash_t[SGX_SM3_HASH_SIZE];
typedef uint8_t sgx_aes_cbc_128bit_key_t[SGX_AESCBC_KEY_SIZE];
typedef uint8_t sgx_aes_ccm_128bit_key_t[SGX_AESCCM_KEY_SIZE];
typedef uint8_t sgx_aes_ccm_128bit_tag_t[SGX_AESCCM_MAC_SIZE];
typedef uint8_t sgx_sm4_ccm_128bit_key_t[SGX_SM4CCM_KEY_SIZE];
typedef uint8_t sgx_sm4_ccm_128bit_tag_t[SGX_SM4CCM_MAC_SIZE];
typedef uint8_t sgx_sm4_cbc_128bit_key_t[SGX_SM4CBC_KEY_SIZE];
typedef uint8_t sgx_sm4_ctr_128bit_key_t[SGX_SM4CTR_KEY_SIZE];
    sgx_status_t SGXAPI sgx_aes_gcm128_enc_get_mac(uint8_t *mac, sgx_aes_state_handle_t aes_gcm_state);
    sgx_status_t SGXAPI sgx_aes_gcm128_dec_verify_mac(uint8_t *mac, sgx_aes_state_handle_t aes_gcm_state);
    sgx_status_t SGXAPI sgx_aes_gcm_close(sgx_aes_state_handle_t aes_gcm_state);
    sgx_status_t SGXAPI sgx_aes_gcm128_dec_update(
        uint8_t *p_src,
        uint32_t src_len,
        uint8_t *p_dst,
        sgx_aes_state_handle_t aes_gcm_state);
    sgx_status_t SGXAPI sgx_aes_cbc_encrypt(
                        const sgx_aes_cbc_128bit_key_t *p_key,
                        const uint8_t *p_src,
                        const uint32_t src_len,
                        uint8_t *p_dst,
                        const uint8_t *p_iv,
                        const uint32_t iv_len);
    sgx_status_t SGXAPI sgx_aes_cbc_decrypt(
                        const sgx_aes_cbc_128bit_key_t *p_key,
                        const uint8_t *p_src,
                        const uint32_t src_len,
                        uint8_t *p_dst,
                        const uint8_t *p_iv,
                        const uint32_t iv_len);
    sgx_status_t SGXAPI sgx_aes_ccm128_encrypt(const sgx_aes_ccm_128bit_key_t *p_key,
                                                const uint8_t *p_src,
                                                uint32_t src_len,
                                                uint8_t *p_dst,
                                                const uint8_t *p_iv,
                                                uint32_t iv_len,
                                                const uint8_t *p_aad,
                                                uint32_t aad_len,
                                                sgx_aes_ccm_128bit_tag_t *p_out_mac);
    sgx_status_t SGXAPI sgx_aes_ccm128_decrypt(const sgx_aes_ccm_128bit_key_t *p_key,
                                                const uint8_t *p_src,
                                                uint32_t src_len,
                                                uint8_t *p_dst,
                                                const uint8_t *p_iv,
                                                uint32_t iv_len,
                                                const uint8_t *p_aad,
                                                uint32_t aad_len,
                                                const sgx_aes_ccm_128bit_tag_t *p_in_mac);
    sgx_status_t SGXAPI sgx_aes_ccm128_init(
        const uint8_t *p_key,
        const uint8_t *p_iv,
        uint32_t iv_len,
        const uint8_t *p_aad,
        uint32_t aad_len,
        sgx_aes_state_handle_t *aes_ccm_state);
    sgx_status_t SGXAPI sgx_aes_ccm128_enc_get_mac(uint8_t *mac, sgx_aes_state_handle_t aes_ccm_state);
    sgx_status_t SGXAPI sgx_aes_ccm128_dec_verify_mac(uint8_t *mac, sgx_aes_state_handle_t aes_ccm_state);
    sgx_status_t SGXAPI sgx_aes_ccm_close(sgx_aes_state_handle_t aes_ccm_state);
    sgx_status_t SGXAPI sgx_aes_ccm128_enc_update(
        uint8_t *p_src,
        uint32_t src_len,
        uint8_t *p_dst,
        sgx_aes_state_handle_t aes_ccm_state);
    sgx_status_t SGXAPI sgx_aes_ccm128_dec_update(
        uint8_t *p_src,
        uint32_t src_len,
        uint8_t *p_dst,
        sgx_aes_state_handle_t aes_ccm_state);
    sgx_status_t SGXAPI sgx_sm3_msg(const uint8_t *p_src, uint32_t src_len, sgx_sm3_hash_t *p_hash);
    sgx_status_t SGXAPI sgx_sm3_init(sgx_sm3_state_handle_t* p_sm3_handle);
    sgx_status_t SGXAPI sgx_sm3_update(const uint8_t *p_src, uint32_t src_len, sgx_sm3_state_handle_t sm3_handle);
    sgx_status_t SGXAPI sgx_sm3_get_hash(sgx_sm3_state_handle_t sm3_handle, sgx_sm3_hash_t *p_hash);
    sgx_status_t SGXAPI sgx_sm3_close(sgx_sm3_state_handle_t sm3_handle);
    sgx_status_t SGXAPI sgx_sm4_ccm128_encrypt(const sgx_sm4_ccm_128bit_key_t *p_key,
                                                const uint8_t *p_src,
                                                uint32_t src_len,
                                                uint8_t *p_dst,
                                                const uint8_t *p_iv,
                                                uint32_t iv_len,
                                                const uint8_t *p_aad,
                                                uint32_t aad_len,
                                                sgx_sm4_ccm_128bit_tag_t *p_out_mac);
    sgx_status_t SGXAPI sgx_sm4_ccm128_decrypt(const sgx_sm4_ccm_128bit_key_t *p_key,
                                                const uint8_t *p_src,
                                                uint32_t src_len,
                                                uint8_t *p_dst,
                                                const uint8_t *p_iv,
                                                uint32_t iv_len,
                                                const uint8_t *p_aad,
                                                uint32_t aad_len,
                                                const sgx_sm4_ccm_128bit_tag_t *p_in_mac);
    sgx_status_t SGXAPI sgx_sm4_ccm128_init(
        const uint8_t *p_key,
        const uint8_t *p_iv,
        uint32_t iv_len,
        const uint8_t *p_aad,
        uint32_t aad_len,
        sgx_sm4_state_handle_t *sm4_ccm_state);
    sgx_status_t SGXAPI sgx_sm4_ccm128_enc_get_mac(uint8_t *mac, sgx_sm4_state_handle_t sm4_ccm_state);
    sgx_status_t SGXAPI sgx_sm4_ccm128_dec_verify_mac(uint8_t *mac, sgx_sm4_state_handle_t sm4_ccm_state);
    sgx_status_t SGXAPI sgx_sm4_ccm_close(sgx_sm4_state_handle_t sm4_ccm_state);
    sgx_status_t SGXAPI sgx_sm4_ccm128_enc_update(
        uint8_t *p_src,
        uint32_t src_len,
        uint8_t *p_dst,
        sgx_sm4_state_handle_t sm4_ccm_state);
    sgx_status_t SGXAPI sgx_sm4_ccm128_dec_update(
        uint8_t *p_src,
        uint32_t src_len,
        uint8_t *p_dst,
        sgx_sm4_state_handle_t sm4_ccm_state);
    sgx_status_t SGXAPI sgx_sm4_cbc_encrypt(
                        const sgx_sm4_cbc_128bit_key_t *p_key,
                        const uint8_t *p_src,
                        const uint32_t src_len,
                        uint8_t *p_dst,
                        const uint8_t *p_iv,
                        const uint32_t iv_len);
    sgx_status_t SGXAPI sgx_sm4_cbc_decrypt(
                        const sgx_sm4_cbc_128bit_key_t *p_key,
                        const uint8_t *p_src,
                        const uint32_t src_len,
                        uint8_t *p_dst,
                        const uint8_t *p_iv,
                        const uint32_t iv_len);
    sgx_status_t SGXAPI sgx_sm4_ctr_encrypt(
                        const sgx_sm4_ctr_128bit_key_t *p_key,
                        const uint8_t *p_src,
                        const uint32_t src_len,
                        uint8_t *p_ctr,
                        const uint32_t ctr_inc_bits,
                        uint8_t *p_dst);
    sgx_status_t SGXAPI sgx_sm4_ctr_decrypt(
                        const sgx_sm4_ctr_128bit_key_t *p_key,
                        const uint8_t *p_src,
                        const uint32_t src_len,
                        uint8_t *p_ctr,
                        const uint32_t ctr_inc_bits,
                        uint8_t *p_dst);
    sgx_status_t SGXAPI sgx_hmac_sm3_msg(const unsigned char *p_src, int src_len, const unsigned char *p_key, int key_len,
        unsigned char *p_mac, int mac_len);
    sgx_status_t SGXAPI sgx_hmac_sm3_init(const unsigned char *p_key, int key_len, sgx_hmac_state_handle_t *p_hmac_handle);
    sgx_status_t SGXAPI sgx_hmac_sm3_update(const uint8_t *p_src, int src_len, sgx_hmac_state_handle_t hmac_handle);
    sgx_status_t SGXAPI sgx_hmac_sm3_final(unsigned char *p_hash, int hash_len, sgx_hmac_state_handle_t hmac_handle);
    sgx_status_t SGXAPI sgx_hmac_sm3_close(sgx_hmac_state_handle_t hmac_handle);
    sgx_status_t SGXAPI sgx_sm2_open_context(sgx_ecc_state_handle_t* p_ecc_handle);
    sgx_status_t SGXAPI sgx_sm2_close_context(sgx_ecc_state_handle_t ecc_handle);
    sgx_status_t SGXAPI sgx_sm2_create_key_pair(sgx_ec256_private_t *p_private,
                                                sgx_ec256_public_t *p_public,
                                                sgx_ecc_state_handle_t ecc_handle);
    sgx_status_t SGXAPI sgx_sm2_check_point(const sgx_ec256_public_t *p_point,
                                            const sgx_ecc_state_handle_t ecc_handle,
                                            int *p_valid);
    sgx_status_t SGXAPI sgx_sm2_compute_shared_dhkey(const sgx_ec256_private_t *p_private_b,
                                                    const sgx_ec256_public_t *p_public_ga,
                                                    sgx_ec256_dh_shared_t *p_shared_key,
                                                    sgx_ecc_state_handle_t ecc_handle);
    sgx_status_t SGXAPI sgx_calculate_sm2_priv_key(const unsigned char* hash_drg, int hash_drg_len,
        const unsigned char* sgx_sm2_order, int sgx_sm2_order_len,
        unsigned char* out_key, int out_key_len);
    sgx_status_t SGXAPI sgx_sm2_calculate_pub_from_priv(const sgx_ec256_private_t *p_att_priv_key,
        sgx_ec256_public_t  *p_att_pub_key);
    sgx_status_t SGXAPI sgx_sm2_sign(const uint8_t *p_data,
                                    uint32_t data_size,
                                    const sgx_ec256_private_t *p_private,
                                    sgx_ec256_signature_t *p_signature,
                                    sgx_ecc_state_handle_t ecc_handle);
    sgx_status_t SGXAPI sgx_sm2_verify(const uint8_t *p_data,
                                    uint32_t data_size,
                                    const sgx_ec256_public_t *p_public,
                                    const sgx_ec256_signature_t *p_signature,
                                    uint8_t *p_result,
                                    sgx_ecc_state_handle_t ecc_handle);
    sgx_status_t SGXAPI sgx_sm2_verify_hash(const uint8_t *hash,
                                            const sgx_ec256_public_t *p_public,
                                            const sgx_ec256_signature_t *p_signature,
                                            uint8_t *p_result,
                                            sgx_ecc_state_handle_t ecc_handle);