sgx_crypto/sgx_crypto_sys/src/lib.rs


        pub fn sgx_aes_gcm128_dec_update(
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            aes_gcm_state: AesHandle,
        ) -> SgxStatus;

        pub fn sgx_aes_gcm128_enc_get_mac(mac: *mut u8, aes_gcm_state: AesHandle) -> SgxStatus;

        pub fn sgx_aes_gcm128_dec_verify_mac(mac: *const u8, aes_gcm_state: AesHandle)
            -> SgxStatus;

        pub fn sgx_aes_gcm_close(aes_gcm_state: AesHandle) -> SgxStatus;

        pub fn sgx_aes_ccm128_encrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
            p_aad: *const u8,
            aad_len: u32,
            p_out_mac: *mut Mac128bit,
        ) -> SgxStatus;

        pub fn sgx_aes_ccm128_decrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
            p_aad: *const u8,
            aad_len: u32,
            p_in_mac: *const Mac128bit,
        ) -> SgxStatus;

        pub fn sgx_aes_ccm128_init(
            p_key: *const u8,
            p_iv: *const u8,
            iv_len: u32,
            p_aad: *const u8,
            aad_len: u32,
            aes_ccm_state: *mut AesHandle,
        ) -> SgxStatus;

        pub fn sgx_aes_ccm128_enc_update(
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            aes_ccm_state: AesHandle,
        ) -> SgxStatus;

        pub fn sgx_aes_ccm128_dec_update(
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            aes_ccm_state: AesHandle,
        ) -> SgxStatus;

        pub fn sgx_aes_ccm128_enc_get_mac(mac: *mut u8, aes_ccm_state: AesHandle) -> SgxStatus;

        pub fn sgx_aes_ccm128_dec_verify_mac(mac: *const u8, aes_ccm_state: AesHandle)
            -> SgxStatus;

        pub fn sgx_aes_ccm_close(aes_ccm_state: AesHandle) -> SgxStatus;

        pub fn sgx_aes_cbc_encrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
        ) -> SgxStatus;

        pub fn sgx_aes_cbc_decrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
        ) -> SgxStatus;

        pub fn sgx_sm3_msg(p_src: *const u8, src_len: u32, p_hash: *mut Sm3Hash) -> SgxStatus;
        pub fn sgx_sm3_init(p_sm3_handle: *mut Sm3Handle) -> SgxStatus;
        pub fn sgx_sm3_update(p_src: *const u8, src_len: u32, sm3_handle: Sm3Handle) -> SgxStatus;
        pub fn sgx_sm3_get_hash(sm3_handle: Sm3Handle, p_hash: *mut Sm3Hash) -> SgxStatus;
        pub fn sgx_sm3_close(sm3_handle: Sm3Handle) -> SgxStatus;

        pub fn sgx_sm4_ccm128_encrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
            p_aad: *const u8,
            aad_len: u32,
            p_out_mac: *mut Mac128bit,
        ) -> SgxStatus;

        pub fn sgx_sm4_ccm128_decrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
            p_aad: *const u8,
            aad_len: u32,
            p_in_mac: *const Mac128bit,
        ) -> SgxStatus;

        pub fn sgx_sm4_ccm128_init(
            p_key: *const u8,
            p_iv: *const u8,
            iv_len: u32,
            p_aad: *const u8,
            aad_len: u32,
            sm4_ccm_state: *mut Sm4Handle,
        ) -> SgxStatus;

        pub fn sgx_sm4_ccm128_enc_update(
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            sm4_ccm_state: Sm4Handle,
        ) -> SgxStatus;

        pub fn sgx_sm4_ccm128_dec_update(
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            sm4_ccm_state: Sm4Handle,
        ) -> SgxStatus;

        pub fn sgx_sm4_ccm128_enc_get_mac(mac: *mut u8, sm4_ccm_state: Sm4Handle) -> SgxStatus;

        pub fn sgx_sm4_ccm128_dec_verify_mac(mac: *const u8, sm4_ccm_state: Sm4Handle)
            -> SgxStatus;

        pub fn sgx_sm4_ccm_close(sm4_ccm_state: Sm4Handle) -> SgxStatus;

        pub fn sgx_sm4_cbc_encrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
        ) -> SgxStatus;

        pub fn sgx_sm4_cbc_decrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_dst: *mut u8,
            p_iv: *const u8,
            iv_len: u32,
        ) -> SgxStatus;

        pub fn sgx_sm4_ctr_encrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_ctr: *mut u8,
            ctr_inc_bits: u32,
            p_dst: *mut u8,
        ) -> SgxStatus;

        pub fn sgx_sm4_ctr_decrypt(
            p_key: *const Key128bit,
            p_src: *const u8,
            src_len: u32,
            p_ctr: *mut u8,
            ctr_inc_bits: u32,
            p_dst: *mut u8,
        ) -> SgxStatus;

        pub fn sgx_hmac_sm3_msg(
            p_src: *const u8,
            src_len: i32,
            p_key: *const u8,
            key_len: i32,
            p_mac: *mut u8,
            mac_len: i32,
        ) -> SgxStatus;

        pub fn sgx_hmac_sm3_init(
            p_key: *const u8,
            key_len: i32,
            p_hmac_handle: *mut HMacHandle,
        ) -> SgxStatus;

        pub fn sgx_hmac_sm3_update(
            p_src: *const u8,
            src_len: i32,
            hmac_handle: HMacHandle,
        ) -> SgxStatus;

        pub fn sgx_hmac_sm3_final(
            p_hash: *mut u8,
            hash_len: i32,
            hmac_handle: HMacHandle,
        ) -> SgxStatus;

        pub fn sgx_hmac_sm3_close(hmac_handle: HMacHandle) -> SgxStatus;

        pub fn sgx_sm2_open_context(p_ecc_handle: *mut EccHandle) -> SgxStatus;
        pub fn sgx_sm2_close_context(ecc_handle: EccHandle) -> SgxStatus;

        pub fn sgx_sm2_create_key_pair(
            p_private: *mut Ec256PrivateKey,
            p_public: *mut Ec256PublicKey,
            ecc_handle: EccHandle,
        ) -> SgxStatus;

        pub fn sgx_sm2_check_point(
            p_point: *const Ec256PublicKey,
            ecc_handle: EccHandle,
            p_valid: *mut i32,
        ) -> SgxStatus;

        pub fn sgx_sm2_compute_shared_dhkey(
            p_private_b: *const Ec256PrivateKey,
            p_public_ga: *const Ec256PublicKey,
            p_shared_key: *mut Ec256SharedKey,
            ecc_handle: EccHandle,
        ) -> SgxStatus;

        pub fn sgx_sm2_sign(
            p_data: *const u8,
            data_size: u32,
            p_private: *const Ec256PrivateKey,
            p_signature: *mut Ec256Signature,
            ecc_handle: EccHandle,
        ) -> SgxStatus;

        pub fn sgx_sm2_verify(
            p_data: *const u8,
            data_size: u32,
            p_public: *const Ec256PublicKey,
            p_signature: *const Ec256Signature,
            p_result: *mut u8,
            ecc_handle: EccHandle,
        ) -> SgxStatus;

        pub fn sgx_sm2_verify_hash(
            hash: *const u8,
            p_public: *const Ec256PublicKey,
            p_signature: *const Ec256Signature,
            p_result: *mut u8,
            ecc_handle: EccHandle,
        ) -> SgxStatus;

        pub fn sgx_calculate_sm2_priv_key(
            hash_drg: *const u8,
            hash_drg_len: i32,
            sgx_sm2_order: *const u8,
            sgx_sm2_order_len: i32,
            out_key: *mut u8,
            out_key_len: i32,
        ) -> SgxStatus;

        pub fn sgx_sm2_calculate_pub_from_priv(
            p_att_priv_key: *const Ec256PrivateKey,
            p_att_pub_key: *mut Ec256PublicKey,
        ) -> SgxStatus;
    }
}
